# starspin

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  auth.py  database.py  main.py  models.py  schemas.py
app/static/css/: styles.css
app/templates/: base.html  game.html  history.html  index.html  login.html  register.html
