[tool.poetry]
name = "starspin"
version = "0.1.0"
description = "Игра с вращающимся колесом казино и ставками звездами"
authors = ["Your Name <your.email@example.com>"]
packages = [
    {include = "app"}
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
alembic = "^1.12.0"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 